--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>code-memo-lvb</groupId>
+	<groupId>lvb-test</groupId>
 	<artifactId>code-lvb</artifactId>
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
@@ -17,6 +17,7 @@
 
 	<modules>
 	<module>springmvc-mybatis-jetty</module>
+	<module>kafka-demo-lvb</module>
 	</modules>
 
 	<build>
