--- a/kafka-demo/pom.xml
+++ b/kafka-demo/pom.xml
@@ -1,13 +1,14 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>lvb-test</groupId>
-		<artifactId>code-lvb</artifactId>
+		<groupId>lvb-training</groupId>
+		<artifactId>code-training</artifactId>
 		<version>1.0.0</version>
 	</parent>
 
-	<artifactId>kafka-demo-lvb</artifactId>
+	<artifactId>kafka-demo</artifactId>
 	<name>Kafka Demo</name>
 
 	<dependencies>
@@ -39,4 +40,18 @@
 			<version>1.1.3</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<configuration>
+					<downloadSources>true</downloadSources>
+					<downloadJavadocs>true</downloadJavadocs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
