--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
 	
 	<groupId>lvb-training</groupId>
 	<artifactId>code-training</artifactId>
-	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<url>https://github.com/lvbabc/code-memo-lvb</url>
 	<name>Code Memo</name>
@@ -20,6 +19,7 @@
 	<module>springmvc-mybatis-jetty</module>
 	<module>kafka-demo</module>
 	<module>java-practice</module>
+    <module>io</module>
 	</modules>
 
 	<build>
@@ -39,14 +39,6 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.10.3</version>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jxr-plugin</artifactId>
-				<version>2.5</version>
-				<configuration>
-					<aggregate>true</aggregate>
-				</configuration>
-			</plugin>
 		</plugins>
 	</reporting>
 
@@ -58,6 +50,23 @@
 			<url>https://github.com/lvbabc</url>
 		</developer>
 	</developers>
+
+	<repositories>
+		<repository>
+			<id>zxsoft-public</id>
+			<name>Nexus Release Repository</name>
+			<url>http://192.168.3.21:18081/nexus/content/groups/public/</url>
+		</repository>
+		<repository>
+			<id>typesafe</id>
+			<name>Typesafe Repository</name>
+			<url>http://repo.typesafe.com/typesafe/releases/</url>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+		</repository>
+	</repositories>
 
 	<licenses>
 		<license>
